  * Added --user-version-as-seq-id option to breseq. If present, it will use the full
    VERSION in an input GenBank file (e.g., NC_001416.1) as the sequence ID instead of
    the LOCUS (e.g., NC_001416). You will need to use the converted reference file
    (data/reference.gff) for further breseq and gdtools operations on breseq output
    generated using this option.
  * Fixed bug in gdtools ANNOTATE that caused it to fail with --preserve-evidence
  * Miscellaneous improvements to other gdtools subcommands.

Version 0.35.0
   * Increased specificity of JC prediction. Reads are now only assigned to candidate
     junctions that are their best matches. They are never assigned to other junctions,
     even if they match them better than the reference. To get the earlier behavior
     (which might be preferred for consensus mode or for predicting polymorphisms from
     a population with little diversity use the --junction-allow-suboptimal-matches option.
     This option can result in some reads being misassigned to the wrong junctions.
   * Fixed various errors when using --user-evidence files and --aligned-sam input.

Version 0.34.2
   * Improved compatibility with versions of R compiled with limited graphics support
   * Increased resolution of coverage plots

Version 0.34.1
   * Fixed bug that predicted zero-length deletions in circular genomes.
   * Fixed bug that caused runs to fail when an empty read file was provided as input.
   * Fixed predict mutations junction side_1_position > side_2_position bug.
   * Added pipeline control options (--skip-*-prediction). Implementation is still experimental.

Version 0.34.0
   * Fixed bug where two rejected JC evidence items could predict a mutation.
   * Added new option --junction-minimum-pr-no-read-start-per-position to prevent saturation
     of coverage in high-coverage samples from leading to rejection of valid JC prediction.
     Set this option to 0.0 if you want to use the behavior of previous versions.