@@ -1506,7 +1506,7 @@ int breseq_default_action(int argc, char* argv[])
     
     string reference_hash_file_name = settings.reference_hash_file_name;
     string reference_fasta_file_name = settings.reference_fasta_file_name;
-    string command = "bowtie2-build -q " + settings.reference_fasta_file_name + " " + reference_hash_file_name;
+    string command = "bowtie2-build -q " + double_quote(settings.reference_fasta_file_name) + " " + double_quote(reference_hash_file_name);
     SYSTEM(command);
     settings.track_intermediate_file(settings.reference_alignment_done_file_name, settings.reference_hash_file_name + "*");
 
@@ -1537,7 +1537,7 @@ int breseq_default_action(int argc, char* argv[])
         bowtie2_seed_substring_size_stringent = max<uint32_t>(9, bowtie2_seed_substring_size_stringent);
         bowtie2_seed_substring_size_stringent = min<uint32_t>(31, bowtie2_seed_substring_size_stringent);
         
-        string command = "bowtie2 -t --no-unal -p " + s(settings.num_processors) + " -L " +  to_string<uint32_t>(bowtie2_seed_substring_size_stringent) + " " + settings.bowtie2_scoring + " " + settings.bowtie2_stage1 + " --reorder -x " + reference_hash_file_name + " -U " + read_fastq_file + " -S " + (do_2_stage_alignment ? stage1_reference_sam_file_name + " --un " + stage1_unmatched_fastq_file_name : reference_sam_file_name);
+        string command = "bowtie2 -t --no-unal -p " + s(settings.num_processors) + " -L " +  to_string<uint32_t>(bowtie2_seed_substring_size_stringent) + " " + settings.bowtie2_scoring + " " + settings.bowtie2_stage1 + " --reorder -x " + double_quote(reference_hash_file_name) + " -U " + double_quote(read_fastq_file) + " -S " + (do_2_stage_alignment ? double_quote(stage1_reference_sam_file_name) + " --un " + double_quote(stage1_unmatched_fastq_file_name) : double_quote(reference_sam_file_name));
         SYSTEM(command);
         
         if (do_2_stage_alignment) {
@@ -1566,7 +1566,7 @@ int breseq_default_action(int argc, char* argv[])
           bowtie2_seed_substring_size_relaxed = max<uint32_t>(9, bowtie2_seed_substring_size_relaxed);
           bowtie2_seed_substring_size_relaxed = min<uint32_t>(31, bowtie2_seed_substring_size_relaxed);
         
-          string command = "bowtie2 -t --no-unal -p " + s(settings.num_processors) + " -L " + to_string<uint32_t>(bowtie2_seed_substring_size_relaxed) + " " + settings.bowtie2_scoring + " " + settings.bowtie2_stage2 + " --reorder -x " + reference_hash_file_name + " -U " + read_fastq_file + " -S " + stage2_reference_sam_file_name;
+          string command = "bowtie2 -t --no-unal -p " + s(settings.num_processors) + " -L " + to_string<uint32_t>(bowtie2_seed_substring_size_relaxed) + " " + settings.bowtie2_scoring + " " + settings.bowtie2_stage2 + " --reorder -x " + double_quote(reference_hash_file_name) + " -U " + double_quote(read_fastq_file) + " -S " + double_quote(stage2_reference_sam_file_name);
           SYSTEM(command);
           
           settings.track_intermediate_file(settings.reference_alignment_done_file_name, stage2_reference_sam_file_name);
@@ -1745,7 +1745,7 @@ int breseq_default_action(int argc, char* argv[])
           bowtie2_seed_substring_size_junction = min<uint32_t>(31, bowtie2_seed_substring_size_junction);
           
           string command = "bowtie2 -t --no-unal -p " + s(settings.num_processors) + " --local " + " -L " + to_string<uint32_t>(bowtie2_seed_substring_size_junction) + " "
-          + settings.bowtie2_scoring + " " + settings.bowtie2_junction + " --reorder -x " + candidate_junction_hash_file_name + " -U " + read_fastq_file + " -S " + candidate_junction_sam_file_name;
+          + settings.bowtie2_scoring + " " + settings.bowtie2_junction + " --reorder -x " + candidate_junction_hash_file_name + " -U " + double_quote(read_fastq_file) + " -S " + double_quote(candidate_junction_sam_file_name);
           
           SYSTEM(command);
           
@@ -2127,10 +2127,14 @@ int breseq_default_action(int argc, char* argv[])
         string plot_error_rates_r_script_file_name = settings.plot_error_rates_r_script_file_name;
         string plot_error_rates_r_script_log_file_name = settings.file_name(settings.plot_error_rates_r_script_log_file_name, "#", base_name);
         string error_rates_plot_file_name = settings.file_name(settings.error_rates_plot_file_name, "#", base_name);
-        command = "R --vanilla in_file=" + cString(error_rates_base_qual_error_prob_file_name).escape_shell_chars() +
-          " out_file=" + cString(error_rates_plot_file_name).escape_shell_chars() +
-          " < "        + cString(plot_error_rates_r_script_file_name).escape_shell_chars() +
-          " > "        + cString(plot_error_rates_r_script_log_file_name).escape_shell_chars();
+        command = "R --vanilla < " + double_quote(plot_error_rates_r_script_file_name) +
+          " > " + double_quote(plot_error_rates_r_script_log_file_name) +
+          " --args" +
+          " in_file=" + double_quote(error_rates_base_qual_error_prob_file_name) +
+          " out_file=" + double_quote(error_rates_plot_file_name) +
+          " < " + double_quote(plot_error_rates_r_script_file_name) +
+          " > " + double_quote(plot_error_rates_r_script_log_file_name);
+        
         SYSTEM(command,false, false, false); //NOTE: Not escaping shell characters here.
       }
 
