@@ -19,22 +19,15 @@
 
 ##error_count_file=/path/to/error_count
 
-for (e in commandArgs()) {
-  ta = strsplit(e,"=",fixed=TRUE)
-  if(! is.na(ta[[1]][2])) {
-    temp = ta[[1]][2]
- #   temp = as.numeric(temp) #Im only inputting numbers so I added this to recognize scientific notation
-    if(substr(ta[[1]][1],nchar(ta[[1]][1]),nchar(ta[[1]][1])) == "I") {
-      temp = as.integer(temp)
-    }
-    if(substr(ta[[1]][1],nchar(ta[[1]][1]),nchar(ta[[1]][1])) == "N") {
-      temp = as.numeric(temp)
-    }
-    assign(ta[[1]][1],temp)
-    cat("assigned ",ta[[1]][1]," the value of |",temp,"|\n")
+for (e in commandArgs(TRUE)) {
+  ta = strsplit(e,"=",fixed=TRUE)[[1]]
+  if(length(ta)>1) {
+    temp = ta[2]
+    assign(ta[1],temp)
+    cat("assigned ",ta[1]," the value of |",temp,"|\n")
   } else {
     assign(ta[[1]][1],TRUE)
-    cat("assigned ",ta[[1]][1]," the value of TRUE\n")
+    cat("assigned ",ta[1]," the value of TRUE\n")
   }
 }
 
